style: add scroll padding top to fix header overlapping content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 
 @layer base {
   html {
-    @apply scroll-smooth;
+    @apply scroll-pt-24 scroll-smooth;
   }
 
   body {
